<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.aliyun.openservices</groupId>
    <artifactId>aliyun-log-android-sdk</artifactId>
    <version>0.3.0</version>
    <name>Sls SDK for Java API Version 0.6.0</name>
    <licenses>
        <license>
            <name></name>
            <url></url>
            <distribution>repo</distribution>
            <comments>Copyright (C) Alibaba Cloud Computing. All rights reserved.</comments>
        </license>
    </licenses>
    <scm>
        <url></url>
        <connection></connection>
    </scm>
    <developers>
        <developer>
            <id>aliyunproducts</id>
            <name>Aliyun Log development team</name>
            <email>aliyunsdk@aliyun.com</email>
        </developer>
    </developers>
    <dependencies>
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
            <version>1.1.55.android</version>
        </dependency>
    </dependencies>

    <distributionManagement>
        <snapshotRepository>
            <id>sonatype-nexus-snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>sonatype-nexus-staging</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>



    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>1.5</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>1.6.3</version>
                <extensions>true</extensions>
                <configuration>
                    <serverId>sonatype-nexus-staging</serverId>
                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.2.1</version>
                <configuration>
                    <forceCreation>true</forceCreation>
                    <excludes>
                        <exclude>com/aliyun/openservices/</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.9</version>
                <configuration>
                    <argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m
                        -Dfile.encoding=UTF-8</argLine>
                    <excludes>
                    </excludes>
                    <forkMode>once</forkMode>
                </configuration>
            </plugin>

            <plugin> 
                <groupId>org.apache.maven.plugins</groupId>  
                <artifactId>maven-javadoc-plugin</artifactId>  
                <version>2.8</version>  
                <configuration> 
                    <encoding>UTF-8</encoding>  
                    <tags> 
                        <tag> 
                            <name>author</name>  
                            <placement>X</placement> 
                        </tag> 
                    </tags> 
                </configuration>  
                <executions> 
                    <execution> 
                        <phase>package</phase>  
                        <goals> 
                            <goal>jar</goal> 
                        </goals> 
                    </execution> 
                </executions> 
            </plugin>  
        </plugins>
    </build>
    <url>http://www.aliyun.com</url>
    <description>Aliyun Simple Log Service SDK for Android</description>
</project>
